--- a/src/pages/docs/backdrop-invert.mdx
+++ b/src/pages/docs/backdrop-invert.mdx
@@ -42,6 +42,23 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
+### Backdrop Invert
+
+You can customize the values for the `backdrop-invert` filter in your Tailwind config.
+
+```diff-js
+  // tailwind.config.js
+  module.exports = {
+    theme: {
+      backdropInvert: {
+        0: '0',
++       50: '.5',
+        DEFAULT: '100%',
+      }
+    }
+  }
+```
+
 ### Variants
 
 <Variants plugin="backdropInvert" name="backdrop invert" />
