--- a/src/pages/docs/backdrop-saturate.mdx
+++ b/src/pages/docs/backdrop-saturate.mdx
@@ -45,6 +45,26 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
+### Backdrop Saturate Scale
+
+You can customize the values for the `backdrop-saturate` filter in your Tailwind config.
+
+```diff-js
+  // tailwind.config.js
+  module.exports = {
+    theme: {
+      backdropSaturate: {
+        0: '0',
++       25: '.25',
+        50: '.5',
+        100: '1',
+        150: '1.5',
+        200: '2',
+      }
+    }
+  }
+```
+
 ### Variants
 
 <Variants plugin="backdropSaturate" name="backdrop saturate" />
