--- a/src/pages/docs/backdrop-sepia.mdx
+++ b/src/pages/docs/backdrop-sepia.mdx
@@ -42,6 +42,24 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
+### Backdrop Sepia Scale
+
+You can customize the values for the `backdrop-sepia` filter in your Tailwind config.
+
+```diff-js
+  // tailwind.config.js
+  module.exports = {
+    theme: {
+      backdropSepia: {
+        0: '0',
++       25: '.25',
++       75: '.75',
+        DEFAULT: '100%',
+      }
+    }
+  }
+```
+
 ### Variants
 
 <Variants plugin="backdropSepia" name="backdrop sepia" />
