--- a/src/pages/docs/grayscale.mdx
+++ b/src/pages/docs/grayscale.mdx
@@ -42,6 +42,23 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
+### Grayscale Scale
+
+You can customize the values for the `grayscale` filter in your Tailwind config.
+
+```diff-js
+  // tailwind.config.js
+  module.exports = {
+    theme: {
+      grayscale: {
+        0: '0',
++      '1/2': '50%',
+        DEFAULT: '100%',
+      }
+    }
+  }
+```
+
 ### Variants
 
 <Variants plugin="grayscale" name="grayscale" />
