--- a/src/pages/docs/backdrop-blur.mdx
+++ b/src/pages/docs/backdrop-blur.mdx
@@ -48,7 +48,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
-### Blur Scale
+### Backdrop Blur Scale
 
 You can customize the values for the `backdrop-blur` filter in your Tailwind config.
 
