--- a/src/pages/docs/optimizing-for-production.mdx
+++ b/src/pages/docs/optimizing-for-production.mdx
@@ -390,8 +390,8 @@ If you only need a handful of utilities, you can pass an array to `corePlugins` 
 module.exports = {
   // ...
   corePlugins: [
-    margin,
-    padding
+    'margin',
+    'padding'
   ]
 }
 ```
