--- a/src/pages/docs/backdrop-brightness.mdx
+++ b/src/pages/docs/backdrop-brightness.mdx
@@ -51,32 +51,23 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
-### Backdrop Brightness Scale
-
-You can customize the values for the `backdrop-brightness` filter in your Tailwind config.
+You can customize which `backdrop-brightness` utilities are generated using the `backdropBrightness` key in the `theme` section of your `tailwind.config.js` file.
 
 ```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
-      backdropBrightness: {
-        0: '0',
-+       25: '.25',
-        50: '.5',
-        75: '.75',
-        90: '.9',
-        95: '.95',
-        100: '1',
-        105: '1.05',
-        110: '1.1',
-        125: '1.25',
-        150: '1.5',
-+       175: '1.75',
-        200: '2',
-      }
++     extend: {
++       backdropBrightness: {
++         25: '.25',
++         175: '1.75',
++       }
++     }
     }
   }
 ```
+
+Learn more about customizing the default theme in the [theme customization documentation](/docs/theme#customizing-the-default-theme).
 
 ### Variants
 
