--- a/src/pages/docs/backdrop-contrast.mdx
+++ b/src/pages/docs/backdrop-contrast.mdx
@@ -47,6 +47,23 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
+You can customize which `backdrop-contrast` utilities are generated using the `backdropContrast` key in the `theme` section of your `tailwind.config.js` file.
+
+```diff-js
+  // tailwind.config.js
+  module.exports = {
+    theme: {
++     extend: {
++       backdropContrast: {
++         25: '.25',
++       }
++     }
+    }
+  }
+```
+
+Learn more about customizing the default theme in the [theme customization documentation](/docs/theme#customizing-the-default-theme).
+
 ### Backdrop Contrast Scale
 
 You can customize the values for the `backdrop-contrast` filter in your Tailwind config.
