--- a/src/pages/docs/backdrop-grayscale.mdx
+++ b/src/pages/docs/backdrop-grayscale.mdx
@@ -42,22 +42,22 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
-### Backdrop Grayscale Scale
-
-You can customize the values for the `backdrop-grayscale` filter in your Tailwind config.
+You can customize which `backdrop-grayscale` utilities are generated using the `backdropGrayscale` key in the `theme` section of your `tailwind.config.js` file.
 
 ```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
-      backdropGrayscale: {
-        0: '0',
-+       50: '.5',
-        DEFAULT: '100%',
-      }
++     extend: {
++       backdropGrayscale: {
++         50: '.5',
++       }
++     }
     }
   }
 ```
+
+Learn more about customizing the default theme in the [theme customization documentation](/docs/theme#customizing-the-default-theme).
 
 ### Variants
 
