--- a/src/pages/docs/backdrop-saturate.mdx
+++ b/src/pages/docs/backdrop-saturate.mdx
@@ -45,25 +45,22 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
-### Backdrop Saturate Scale
-
-You can customize the values for the `backdrop-saturate` filter in your Tailwind config.
+You can customize which `backdrop-saturate` utilities are generated using the `backdropSaturate` key in the `theme` section of your `tailwind.config.js` file.
 
 ```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
-      backdropSaturate: {
-        0: '0',
-+       25: '.25',
-        50: '.5',
-        100: '1',
-        150: '1.5',
-        200: '2',
-      }
++     extend: {
++       backdropSaturate: {
++         25: '.25',
++       }
++     }
     }
   }
 ```
+
+Learn more about customizing the default theme in the [theme customization documentation](/docs/theme#customizing-the-default-theme).
 
 ### Variants
 
