--- a/src/pages/docs/contrast.mdx
+++ b/src/pages/docs/contrast.mdx
@@ -47,27 +47,22 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
-### Contrast Scale
-
-You can customize the values for the `contrast` filter in your Tailwind config.
+You can customize which `contrast` utilities are generated using the `contrast` key in the `theme` section of your `tailwind.config.js` file.
 
 ```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
-      contrast: {
-        0: '0',
-+       25: '.25',
-        50: '.5',
-        75: '.75',
-        100: '1',
-        125: '1.25',
-        150: '1.5',
-        200: '2',
-      }
++     extend: {
++       contrast: {
++         25: '.25',
++       }
++     }
     }
   }
 ```
+
+Learn more about customizing the default theme in the [theme customization documentation](/docs/theme#customizing-the-default-theme).
 
 ### Variants
 
