--- a/src/pages/docs/drop-shadow.mdx
+++ b/src/pages/docs/drop-shadow.mdx
@@ -46,27 +46,22 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
-### Drop Shadow Scale
-
-You can customize the values for the `drop-shadow` filter in your Tailwind config.
+You can customize which `drop-shadow` utilities are generated using the `dropShadow` key in the `theme` section of your `tailwind.config.js` file.
 
 ```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
-      dropShadow: {
-        sm: '0 1px 1px rgba(0,0,0,0.05)',
-        DEFAULT: ['0 1px 2px rgba(0, 0, 0, 0.1)', '0 1px 1px rgba(0, 0, 0, 0.06)'],
-        md: ['0 4px 3px rgba(0, 0, 0, 0.07)', '0 2px 2px rgba(0, 0, 0, 0.06)'],
-        lg: ['0 10px 8px rgba(0, 0, 0, 0.04)', '0 4px 3px rgba(0, 0, 0, 0.1)'],
-        xl: ['0 20px 13px rgba(0, 0, 0, 0.03)', '0 8px 5px rgba(0, 0, 0, 0.08)'],
-        '2xl': '0 25px 25px rgba(0, 0, 0, 0.15)',
-+       '3xl': '0 35px 35px rgba(0, 0, 0, 0.25)',
-        none: '0 0 #0000',
-      }
++     extend: {
++       dropShadow: {
++         '3xl': '0 35px 35px rgba(0, 0, 0, 0.25)',
++       }
++     }
     }
   }
 ```
+
+Learn more about customizing the default theme in the [theme customization documentation](/docs/theme#customizing-the-default-theme).
 
 ### Variants
 
