--- a/src/pages/docs/invert.mdx
+++ b/src/pages/docs/invert.mdx
@@ -42,23 +42,24 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
-### Invert Scale
-
-You can customize the values for the `invert` filter in your Tailwind config.
+You can customize which `invert` utilities are generated using the `invert` key in the `theme` section of your `tailwind.config.js` file.
 
 ```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
-      invert: {
-        0: '0',
-+       25: '.25',
-+       75: '.75',
-        DEFAULT: '100%',
-      }
++     extend: {
++       invert: {
++         25: '.25',
++         50: '.5',
++         75: '.75',
++       }
++     }
     }
   }
 ```
+
+Learn more about customizing the default theme in the [theme customization documentation](/docs/theme#customizing-the-default-theme).
 
 ### Variants
 
