--- a/src/pages/docs/saturate.mdx
+++ b/src/pages/docs/saturate.mdx
@@ -45,25 +45,23 @@ For more information about Tailwind's responsive design features, check out the 
 
 ## Customizing
 
-### Saturate Scale
-
-You can customize the values for the `saturate` filter in your Tailwind config.
+You can customize which `saturate` utilities are generated using the `saturate` key in the `theme` section of your `tailwind.config.js` file.
 
 ```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
-      sature: {
-        0: '0',
-+       25: '.25',
-        50: '.5',
-        100: '1',
-        150: '1.5',
-        200: '2',
-      }
++     extend: {
++       saturate: {
++         25: '.25',
++         75: '.75',
++       }
++     }
     }
   }
 ```
+
+Learn more about customizing the default theme in the [theme customization documentation](/docs/theme#customizing-the-default-theme).
 
 ### Variants
 
