Add link to layers for further clarity (#854)
New to Tailwind and was reviewing the docs for the first time. I spent a while trying to figure out what layers were after learning about extracting components. Couldn't find an explanation for a while, so a link would be helpful.

--- a/src/pages/docs/extracting-components.mdx
+++ b/src/pages/docs/extracting-components.mdx
@@ -176,7 +176,7 @@ Here's what a `btn-indigo` class might look like using `@apply` to compose it fr
 </style>
 ```
 
-To avoid unintended specificity issues, we recommend wrapping your custom component styles with the `@layer components { ... }` directive to tell Tailwind what layer those styles belong to:
+To avoid unintended specificity issues, we recommend wrapping your custom component styles with the `@layer components { ... }` directive to tell Tailwind what [layer](/docs/functions-and-directives#layer) those styles belong to:
 
 ```css
 @tailwind base;
