--- a/src/pages/docs/backdrop-blur.mdx
+++ b/src/pages/docs/backdrop-blur.mdx
@@ -26,7 +26,7 @@ export const classes = {
 
 ## Usage
 
-Use the `backdrop-blur-{amount?}` utilities alongside the `backdrop-filter` utility to blur an element.
+Use the `backdrop-blur-{amount?}` utilities alongside the `backdrop-filter` utility to control an element’s backdrop blur.
 
 ```html
 <div class="backdrop-filter backdrop-blur-lg ...">
