--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -328,7 +328,7 @@ As of v2.0, Tailwind CSS depends on PostCSS 8. Because PostCSS 8 is only a few m
 Error: PostCSS plugin tailwindcss requires PostCSS 8.
 ```
 
-To help bridge the gap until everyone has updated, we also publish a PostCSS 7 compatibility build under the `compat` channel on npm.
+To help bridge the gap until everyone has updated, we also publish a PostCSS 7 compatibility build as `@tailwindcss/postcss7-compat` on npm.
 
 If you run into the error mentioned above, uninstall Tailwind and re-install using the compatibility build instead:
 
