Add note about purging important selector (#861)
* Add note about purging important selector

* Update configuration.mdx

* Update configuration.mdx

Co-authored-by: Adam Wathan <adam.wathan@gmail.com>

--- a/src/pages/docs/configuration.mdx
+++ b/src/pages/docs/configuration.mdx
@@ -354,6 +354,8 @@ After your configuration is all set up and your root element matches the selecto
 </html>
 ```
 
+When using the selector strategy, be sure that the template file that includes your root selector is included in your [purge configuration](/docs/optimizing-for-production#basic-usage), otherwise all of your CSS will be removed when building for production.
+
 
 ## Separator
 
