--- a/src/pages/docs/using-with-preprocessors.mdx
+++ b/src/pages/docs/using-with-preprocessors.mdx
@@ -33,11 +33,7 @@ The canonical plugin for handling this with PostCSS is [postcss-import](https://
 To use it, install the plugin via npm:
 
 ```shell
-# npm
 npm install postcss-import
-
-# yarn
-yarn add postcss-import
 ```
 
 Then add it as the very first plugin in your PostCSS configuration:
@@ -126,35 +122,52 @@ The `postcss-import` plugin is smart enough to look for files in the `node_modul
 
 ### Nesting
 
-To add support for nested declarations, you have two options:
+To add support for nested declarations, we recommend [@tailwindcss/nesting](https://github.com/tailwindlabs/tailwindcss-nesting), which is a PostCSS plugin that wraps [postcss-nested](https://github.com/postcss/postcss-nested) or [postcss-nesting](https://github.com/jonathantneal/postcss-nesting) and acts as a compatibility layer to make sure your nesting plugin of choice properly understands custom syntax like `@apply` and `@screen`.
 
-- [postcss-nested](https://github.com/postcss/postcss-nested), which uses a syntax much like Sass.
-
-- [postcss-nesting](https://github.com/jonathantneal/postcss-nesting), which follows the [CSS Nesting](https://drafts.csswg.org/css-nesting-1/) specification that will hopefully be available directly in the browser in the future.
-
-To use either of these plugins, install them via npm:
+To use it, install it via npm:
 
 ```shell
-# npm
-npm install postcss-nested  # or postcss-nesting
-
-# yarn
-yarn add postcss-nested  # or postcss-nesting
+npm install @tailwindcss/nesting
 ```
 
-Then add them to your PostCSS configuration, somewhere after Tailwind itself but before Autoprefixer:
+Then add it to your PostCSS configuration, somewhere before Tailwind itself:
 
 ```js
 // postcss.config.js
 module.exports = {
   plugins: [
     require('postcss-import'),
+    require('@tailwindcss/nesting'),
     require('tailwindcss'),
-    require('postcss-nested'), // or require('postcss-nesting')
     require('autoprefixer'),
   ]
 }
 ```
+
+By default, it uses the [postcss-nested](https://github.com/postcss/postcss-nested) plugin under the hood, which uses a Sass-like syntax and is the plugin that powers nesting support in the [Tailwind CSS plugin API](/docs/plugins#css-in-js-syntax).
+
+If you'd rather use [postcss-nesting](https://github.com/jonathantneal/postcss-nesting) (which is based on the work-in-progress [CSS Nesting](https://drafts.csswg.org/css-nesting-1/) specification), first install the plugin alongside `@tailwindcss/nesting`:
+
+```shell
+npm install @tailwindcss/nesting postcss-nesting
+```
+
+Then pass the plugin itself as an argument to `@tailwindcss/nesting` in your PostCSS configuration:
+
+```js
+// postcss.config.js
+module.exports = {
+  plugins: [
+    require('postcss-import'),
+    require('@tailwindcss/nesting')(require('postcss-nesting')),
+    require('tailwindcss'),
+    require('autoprefixer'),
+  ]
+}
+```
+
+This can also be helpful if for whatever reason you need to use a very specific version of `postcss-nested` and want to override the version we bundle with `@tailwindcss/nesting` itself.
+
 
 ### Variables
 
