Update lightBlue to sky

--- a/src/pages/docs/customizing-colors.mdx
+++ b/src/pages/docs/customizing-colors.mdx
@@ -339,7 +339,7 @@ module.exports = {
       current: 'currentColor',
       gray: colors.trueGray,
       red: colors.red,
-      blue: colors.lightBlue,
+      blue: colors.sky,
       yellow: colors.amber,
     }
   }
@@ -365,7 +365,7 @@ Although each color has a specific name, you're encouraged to alias them however
   'emerald',
   'teal',
   'cyan',
-  'lightBlue',
+  'sky',
   'blue',
   'indigo',
   'violet',
