Change blur-0 to blur-none

--- a/src/pages/docs/backdrop-blur.mdx
+++ b/src/pages/docs/backdrop-blur.mdx
@@ -11,7 +11,7 @@ export const classes = {
   plugin: function () {
     return function ({ addUtilities }) {
       addUtilities({
-        '.backdrop-blur-0': { '--tw-backdrop-blur': 'blur(0)' },
+        '.backdrop-blur-none': { '--tw-backdrop-blur': 'blur(0)' },
         '.backdrop-blur-sm': { '--tw-backdrop-blur': 'blur(4px)' },
         '.backdrop-blur': { '--tw-backdrop-blur': 'blur(8px)' },
         '.backdrop-blur-md': { '--tw-backdrop-blur': 'blur(12px)' },
