Document caret color utilities

--- a/src/pages/docs/just-in-time-mode.mdx
+++ b/src/pages/docs/just-in-time-mode.mdx
@@ -282,6 +282,16 @@ Here's the complete list of new pseudo-class variants:
 - `in-range`
 - `out-of-range`
 
+### Caret color utilities
+
+You can now set the color of the cursor in form fields using the new `caret-{color}` utilities:
+
+```html
+<input class="caret-red-500">
+```
+
+These are customizable using the `caretColor` key in the `theme` section of your `tailwind.config.js` file.
+
 ## Breaking changes
 
 ## Known limitations
