--- a/src/pages/docs/just-in-time-mode.mdx
+++ b/src/pages/docs/just-in-time-mode.mdx
@@ -36,6 +36,8 @@ This comes with a lot of advantages:
 
 To see it in action, [watch our announcement video](https://www.youtube.com/watch?v=3O_3X7InOw8).
 
+---
+
 ## Enabling JIT mode
 
 To enable just-in-time mode, set the `mode` option to `'jit'` in your `tailwind.config.js` file:
@@ -75,6 +77,8 @@ Since JIT mode generates your CSS on-demand by scanning your template files, it'
 Now when you start your development server or build runner, Tailwind will generate your styles on-demand instead of generating everything in advance.
 
 Having issues? See the [troubleshooting section](#troubleshooting) to learn how to fix common problems.
+
+---
 
 ## New features
 
@@ -292,7 +296,7 @@ You can now set the color of the cursor in form fields using the new `caret-{col
 
 These are customizable using the `caretColor` key in the `theme` section of your `tailwind.config.js` file.
 
-### Style based on sibling state with `peer-*` variants
+### Sibling selector variants
 
 Similar to the `group-*` variants we've supported for years for styling an element based on the parent state, you can use the new `peer-*` variants to style an element based on the state of one of its previous siblings:
 
@@ -323,7 +327,7 @@ If you run into any other issues or find any bugs, please [open an issue](https:
 
 ## Troubleshooting
 
-### Styles not updating when saving content files
+### Styles don't update when saving content files
 
 As of Tailwind CSS v2.2+, the JIT engine depends on PostCSS's [directory dependency messages](https://github.com/postcss/postcss/blob/main/docs/guidelines/runner.md#3-dependencies) to register your content files as CSS build dependencies with your build tool. These are a fairly new addition to PostCSS (added in May 2021), and not all build tools have been updated to support them yet.
 
